--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #222;
+  background-color: #d48f38;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
